# youtube-tool-scrapping

./: .gitignore  CLAUDE.md  app.py  pyproject.toml  requirements.txt  test_scraper.py  youtube_scraper.py
.claude/: launch.json
tests/: conftest.py  test_cli.py  test_export.py  test_fast_mode.py  test_metrics.py  test_profile.py  test_quota.py  test_scoring.py  test_tiers.py
